correct light & libs